# comp4221-anagram-search

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw1anagram_embedded  main.cpp  probabilities.h  probabilities.h___jb_old___  top5anagram
code for generating probabilities/: CMakeCache.txt  CMakeLists.txt  Makefile  Serializer.cpp  Serializer.h  cmake_install.cmake  main.cpp  probabilities  probability_generator
